--- a/spik/src/main/res/values/strings.xml
+++ b/spik/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="no_lan_adapter">No WiFi adapter found</string>
     <string name="ask_for_enable_lan">Please turn on the WiFi</string>
     <string name="action_settings">Settings</string>
+    <string name="local_service_started">Connected to %1$s</string>
+    <string name="local_service_finished">Disconnected from %1$s</string>
 </resources>
