Improved feedback when no host found

--- a/spik/src/main/res/values/strings.xml
+++ b/spik/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="please_wait">It will be fast !</string>
     <string name="hosts_found">Host(s) found</string>
     <string name="no_host_found">No host found :(</string>
-    <string name="no_host_help">Check you are connected to the same network than your computer</string>
+    <string name="no_host_help">Please, check you are connected to the same network than your computer</string>
 </resources>
