--- a/spik/src/main/res/values/strings.xml
+++ b/spik/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="hosts_found">Host(s) found</string>
     <string name="no_host_found">No host found :(</string>
     <string name="no_host_help">Please, check you are connected to the same network than your computer</string>
+    <string name="local_service_finished">Spik is now disconnected from %1$s</string>
+    <string name="local_service_started">Spik is connected to %1$s</string>
 </resources>
