--- a/spik/src/main/res/values/strings.xml
+++ b/spik/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="connexion_information_label">Information about connexion</string>
     <string name="disconnect_btn">Disconnect</string>
     <string name="connexion_information_details">Connected to %1$s computer</string>
+    <string name="unable_get_wifi_ip">Unable to retrieve out Wifi IP, are you sure to be connected ?</string>
 </resources>
